--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
-  app: "frontend"
-  env: "Frontend-env"
+  app: "Docker"
+  env: "Docker-env-1"
   bucket_name: "elasticbeanstalk-us-east-1-625039252508"
-  bucket_path: "frontend"
+  bucket_path: "Docker"
   on:
     branch: master
   access_key_id: "$AWS_ACCESS_KEY"
