--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t docker-react -f Dockerfile .
+  - docker build -t docker-react .
 script:
   - docker run -e CI=true docker-react npm run test
 deploy:
