--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,10 +1,10 @@
-FROM node:alpine as builder
+FROM node:16-alpine as builder
 WORKDIR '/app'
 COPY package.json .
 RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx
+FROM nginx:alpine
 EXPOSE 80
 COPY /app/build /usr/share/nginx/html
