--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,4 +7,4 @@ RUN npm run build
 
 FROM nginx:alpine
 EXPOSE 80
-COPY /app/build /usr/share/nginx/html
+COPY --from=builder /app/build /usr/share/nginx/html
